# gym_app

./: README.md  VERCEL_DEPLOYMENT.md  build-client.sh  build-server.js  build-vercel.sh  build.sh  enhanced_pdf_parser.py  fix-build.js  fix-db-storage.js  index.html  optimized_pdf_parser.py  package-lock.json  package.json  package.json.backup  package.json.deploy  package.json.vercel  precise_pdf_parser.py  pyproject.toml  replit_zip_error_log.txt  tsconfig.build.json  tsconfig.json  tsconfig.vercel.json  vercel.json  vite.config.js
api/: deploy.js  fallback.js  index.js  main.js  test.js
attached_assets/: Pasted--01-56-26-012-Running-build-in-Washington-D-C-USA-East-iad1-01-56-26-012-Build-machine-co-1749861246221_1749861246222.txt  Pasted--02-40-52-067-Running-build-in-Washington-D-C-USA-East-iad1-02-40-52-067-Build-machine-co-1749861798460_1749861798461.txt  Pasted--02-48-04-890-Running-build-in-Washington-D-C-USA-East-iad1-02-48-04-890-Build-machine-co-1749862173633_1749862173635.txt  Pasted--02-54-49-084-Running-build-in-Washington-D-C-USA-East-iad1-02-54-49-084-Build-machine-co-1749862573037_1749862573038.txt  Pasted--02-58-25-186-Running-build-in-Washington-D-C-USA-East-iad1-02-58-25-187-Build-machine-co-1749862767449_1749862767453.txt  Pasted--03-03-41-906-Running-build-in-Washington-D-C-USA-East-iad1-03-03-41-907-Build-machine-co-1749863279788_1749863279789.txt  Pasted--03-17-59-230-Running-build-in-Washington-D-C-USA-East-iad1-03-17-59-231-Build-machine-co-1749863956044_1749863956045.txt  (+9 more)
client/: package.json  tsconfig.json  vite.config.ts
(+35 files in other folders)
